fixed minor issues on mobile display

--- a/_sass/2-modules/home-content.sass
+++ b/_sass/2-modules/home-content.sass
@@ -89,7 +89,7 @@
   flex-direction: row
   justify-content: space-around
   border-bottom: 1px solid grey
-  width: 400px
+  max-width: 400px
   a, a:active, a:visited
     color: $brown-800
     text-decoration: none
