--- a/_sass/2-modules/home-footer.sass
+++ b/_sass/2-modules/home-footer.sass
@@ -22,7 +22,7 @@ footer.home
   .bulb
     background: transparentize($pink-300, 0.5)
     display: none
-    width: 300px
+    max-width: 300px
     border-radius: 4px
     position: absolute
     bottom: 80%
